# imageio

./: .appveyor.yml  .coveragerc  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  __init__.py  appveyor.yml  base.py  codecov.yml  findlib.py  freeimage.py  freeimage_install.py  freeimage_plugin.py  freeze.py  functions.py  imageio.proxy.py  pyproject.toml  requirements.txt  root.py  semantic_release_conf.py  setup.cfg  setup.py  test_freeimage.py
.cursor/: hooks.json
.cursor/hooks/: blackify.sh
.cursor/rules/: coding.mdc  self_modifying.mdc
.github/: FUNDING.yml  codecov.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: build_docs.yml  cd.yml  ci.yml  cpython_tests.yml  pypy_tests.yml  tmp.yml
docs/: .requirements  Makefile  README.md  classes.rst  code_of_conduct.rst  code_of_conduct_reporting.rst  conf.py  devapi.rst  docsinserter.py  drop27.rst  envvariables.rst  examples.rst  formats.rst  formats.rst.template  functions.rst  get_readme.js  imageio_ext.py  index.rst  installation.rst  make.bat  plugins.rst  releasenotes.rst  scipy.rst  sec_developer.rst  sec_gettingstarted.rst  sec_reference.rst  supported_formats.rst  userapi.rst
docs/_templates/: better_class.rst  formats.rst.template  plugin.rst  standard_images.rst
docs/development/: devapi.rst  index.rst  plugins.rst
docs/ext/: docbuilder_formats.py  docbuilder_plugins.py  docscrape_sphinx.py  imageio_ext.py  numpydoc.py
docs/ext/numpydoc/: __init__.py  numpydoc.py
docs/formats/: formats_by_plugin.rst  index.rst  video_formats.rst
docs/getting_started/: index.rst  installation.rst  overview.rst  requests.rst  scipy.rst
docs/other_usage/: freezing.rst  index.rst
docs/reference/: core_v3.rst  index.rst  userapi.rst
docs/user_guide/: cmdlinescripts.rst  drop27.rst  envvariables.rst  freezing.rst  index.rst  installation.rst  overview.rst  requests.rst  scipy.rst  standardimages.rst
imageio/: __init__.py  __init__.pyi  __main__.py  base.py  fetching.py  findlib.py  freeimage.py  freeimage_install.py  freeze.py  functions.py  request.py  scripts.py  testing.py  typing.py  util.py  v2.py  v2.pyi  v3.py  v3.pyi
imageio/config/: __init__.py  extensions.py  extensions.pyi  plugins.py  plugins.pyi
imageio/core/: __init__.py  fetching.py  findlib.py  format.py  format.pyi  functional_api.py  functions.py  imopen.py  imopen.pyi  legacy_plugin_wrapper.py  legacy_plugin_wrapper.pyi  request.py  request.pyi  sentinels.py  sequence.py  testing.py  util.py  v3_api.py  v3_plugin_api.py
imageio/metadata/: extensions.py  plugins.py
imageio/plugins/: __init__.py  _bsdf.py  _dicom.py  _freeimage.py  _swf.py  _tifffile.py  animatedgif.py  avbin.py  bsdf.py  dicom.py  example.py  feisem.py  ffmpeg.py  fits.py  freeimage.py  freeimage_v3.py  freeimagemulti.py  gdal.py  grab.py  lytro.py  npz.py  opencv.py  pillow.py  pillow_info.py  pillow_legacy.py  pillowmulti.py  plugin_freeimage.py  pyav.py  pydicom.py  rawpy.py  simpleitk.py  spe.py  swf.py  tifffile.py  tifffile_v3.py
make/: README.md  __main__.py  install_python.ps1  maker.py
plugins/: __init__.py  plugin_freeimage.py
tasks/: __init__.py  __main__.py  _config.py  clean.py  copyright.py  docs.py  help.py  install_python.ps1  test.py
tests/: README.md  conftest.py  freeimage_test.py  test_avbin.py  test_bin.py  test_bsdf.py  test_config.py  test_core.py  test_dicom.py  test_fei_tiff.py  test_ffmpeg.py  test_ffmpeg_info.py  test_fits.py  test_format.py  test_freeimage.py  test_freeimage_suite.py  test_gdal.py  test_grab.py  test_legacy_plugin_wrapper.py  test_lytro.py  test_meta.py  test_npz.py  test_opencv.py  test_pillow.py  test_pillow_legacy.py  test_pyav.py  test_pydicom.py  test_rawpy.py  test_simpleitk.py  test_spe.py  test_swf.py  test_tifffile.py  test_tifffile_v3.py  test_v2.py
tests/freezing/: imageiotest.py  imageiotest_freeze.py
tests/fuzzers/: fuzz_read.py
